2025-06-19 ------------------------------------------------------------------------------------------------------------
1 fixed some problems with ModDoc but little new progress -- yet
1 added AddDch+broadcast response, still working out the kinks
2 update of dch contents is now fully working again (simple bindump/restore, no delta yet)
3 alt+shift+z now seems to be working as well

2025-06-18 ------------------------------------------------------------------------------------------------------------
1 updated DFDict and documented it better now
1 the new "ModDoc" broadcast packet rebuilder now deletes old dch's and knows what to add, still more to do!
2 "ModDoc" broadcast rebuilder now deletes AND inserts dch's and sets their proper recId and content too.
3 changing format of this file from '*' to '#' prefixes to indicate next commit group within same day
3 fixed a bug in plugin 'shaping' under the shadow dom

2025-06-17 ------------------------------------------------------------------------------------------------------------
* renamed NewDch packet to AddDch (just feels more inline with Add/Mod/Del)
* moving to a 'send instrux to server, deal with broadcast response to handle' model rather than make mods to client
    before telling server about changes and then having to handle the broadcast response via 'if I sent it I do
    X while all other clients do Y' and thus doubling the workload.
* added html/modules/shared/shared_Functions.js as globalThis.SF
* added dcwRealTree = SF.flatToReal(dcwFlatTree) and dcwFlatTree = SF.realToFlat(dcwRealTree)
* AddDch and DelDch (and ModDoc response) have all been coded, but not yet tested,  tomorrow...!

* changed many _s_ props on DCW_BASE to #props (#dch, #dchRecId, #sysDiv, ...) and now have get/setters for them
* backend is now correctly performing AddDch and DelDch and broadcasting aproper ModDoc, time to work the BtoF logic!
